Fix a crash when opening LS dialog with all patterns filtered-out

If the currently (globally) active tag filters out all the resources,
then the selectors may fail to activate a resource from the user's
preset/style and end up returning a null pointer.

This patch just moves the concept of a "hidden" selection from
KisResourceItemChooser to KisPatternChooser.

Steps to reproduce:

1) In the global pattern chooser create a new tag, don't add any patterns to that, activate the tag
2) See that the pattern selector doesn't have a any resources in it
3) Open the Layer Styles dialog. Click on the bevel style. See the crash.

BUG:445922